Add svg circle component, add models for svg and circle component

--- a/src/app/svg/components/svg/svg.component.html
+++ b/src/app/svg/components/svg/svg.component.html
@@ -1,3 +1,6 @@
-<p>
-  svg works!
-</p>
+<svg>
+    <svg:g *ngFor="let circle of circles"
+           appSvgCircle
+           [circleProperties]="circle">
+    </svg:g>
+</svg>
